fix: overlap filter dialog box

--- a/frappe/public/scss/desk/filters.scss
+++ b/frappe/public/scss/desk/filters.scss
@@ -6,7 +6,7 @@
 	min-width: 500px;
 	min-height: 50px;
 	@include get_textstyle("base", "regular");
-	z-index: 1019;
+	z-index: 5;
 	border: 1px solid var(--border-color);
 }
 
